[package]
name = "xview_rs"
version = "0.1.0"
authors = ["jun"]
include = ["src/**/*", "Cargo.toml"]
# https://doc.rust-lang.org/reference/linkage.html
[lib]
# crate-type = ["rlib", "dylib"]

#crate-type = ["staticlib"]
crate-type = ["dylib"]
[dependencies]
otpl = { path = "../otpl-core" }

# x86_64-pc-windows-gnu
# i686-unknown-linux-gnu
# x86_64-unknown-linux-gnu

# [target.i686-pc-windows-gnu]
# linker = "i686-w64-mingw32-gcc"
# rustflags = "-C panic=abort"

# [target.x86_64-pc-windows-gnu]
# linker = "x86_64-w64-mingw32-gcc"
# #ar = "x86_64-w64-mingw32-gcc-ar"
#[target.x86_64-pc-windows-msvc]
#rustflags = ["-C", "target-feature=+crt-static"]